# Changes required for PyPI
[metadata]:
name = vcf2fhir
version = 0.1.1
description = Convert .vcf files to HL7 FHIR standard
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache Software License
author = ""
author_email = info@elimu.io
url = https://github.com/elimuinformatics/vcf2fhir
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    License :: OSI Approved :: Apache Software License

[options]
test_suite = vcf2fhir.test.test_vcf2fhir.suite
setup_requires =
    setuptools
packages = 
    vcf2fhir
    vcf2fhir.test
python_version = >=3.6
install_requires =
    Cython>=0.29.21
    fhirclient==4.1.0
    pysam
    pandas
    pytz>=2019.3
    PyVCF3>=1.0.3
    pyranges>=0.0.96
tests_require =
    unittest
